# botpipe

./: .gitignore  BotlaneCyclicalCleanupWorkflow.py  BotpipeCyclicalCleanupWorkflow.py  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  Workflow_Instructions.md  __init__.py  cleanup.md  controlroutes.md  policy.md  pyproject.toml  refactor18.md  refactor19.md  report.md  run_cleanup.py  sdk.md  summary.json
.autoloop-test-venv/: pyvenv.cfg
.venv-autoloop/: pyvenv.cfg
.venv-test/: pyvenv.cfg
.venv_phase/: pyvenv.cfg
autoloop/: __init__.py  policy.py  sdk.py  simple.py
autoloop_optimizer/: __init__.py  _selected_workflow.py  adaptation.py  candidate_surfaces.py  company.py  decomposition.py  diagnostics.py  evaluation.py  optimization.py  parameters.py  portfolio.py  refinement.py
autoloop_v3/: ARCHITECTURE_DECISIONS.md  MIGRATION.md  README.md  __init__.py
autoloop_v3_surface.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
botlane/: policy.py  sdk.py  simple.py
botlane_optimizer/: adaptation.py  candidate_surfaces.py  company.py  decomposition.py  evaluation.py  optimization.py  parameters.py  refinement.py
botlane_v3_surface.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
botpipe/: __init__.py  policy.py  sdk.py  simple.py
botpipe_optimizer/: __init__.py  _selected_workflow.py  adaptation.py  candidate_surfaces.py  company.py  decomposition.py  diagnostics.py  evaluation.py  optimization.py  parameters.py  portfolio.py  refinement.py
core/: _compat.py  descriptors.py  effects.py  history.py  operations.py  route_contracts.py  route_required_writes.py  routes.py  schema_registry.py  sessions.py  step_state.py  workflow_capabilities.py  workflow_catalog.py  worklists.py
docs/: architecture.md  authoring.md  goal-jinja-template.md  goal-jinja-unified-prompts.md  goal-remove-legacy-template-compat.md  goal-sdk-cli-parity.md  goal-unified-jinja-cleanup.md  sdk.md  simple-api.md  workflow_authoring_guidelines.md
legacy_docs/: refactor17.md  refactor5.md  refactor8.md
recursive_botlane/: run_recursive_botlane.sh
recursive_botpipe/: run_recursive_botpipe.sh
runtime/: git_tracking.py  observability.py  provider_backends.py  static_graph.py  tracing.py
stdlib/: _selected_workflow.py  adaptation.py  candidate_surfaces.py  (+12 more)
(+4567 files in other folders)
