[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "botlane-v3-surface"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2,<3",
]

[project.scripts]
botlane = "botlane.runtime.cli:main"

[tool.setuptools.packages.find]
include = ["botlane*", "botlane_optimizer*"]

[tool.setuptools.package-data]
botlane = [
  "workflows/**/*",
]
