[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "botpipe"
version = "0.0.0"
requires-python = ">=3.12"
license = {file = "LICENSE"}
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "jinja2>=3.1,<4",
  "pydantic>=2,<3",
]

[project.scripts]
botpipe = "botpipe.runtime.cli:main"

[tool.setuptools.packages.find]
include = ["botpipe*", "botpipe_optimizer*"]

[tool.setuptools.package-data]
botpipe = [
  "workflows/**/*",
]
